--- a/src/main/resources/static/add-login.html
+++ b/src/main/resources/static/add-login.html
@@ -2,89 +2,125 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css">
     <title>Add Login Page</title>
-</head>
-<style>
-    .gradient-custom-2 {
-        background: #fccb90;
-
-        background: -webkit-linear-gradient(to right, #ee7724, #d8363a, #dd3675, #b44593);
-
-        background: linear-gradient(to right, #ee7724, #d8363a, #dd3675, #b44593);
-    }
-
-    @media (min-width: 768px) {
-        .gradient-form {
-            height: 100vh !important;
+    <style>
+        body, html {
+            margin: 0;
+            padding: 0;
+            height: 100%;
+            display: flex;
+            flex-direction: column;
         }
-    }
+        header {
+            background-color: #000000;
+            color: #fff;
+            padding: 20px;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
 
-    @media (min-width: 769px) {
+        header .logo {
+            font-size: 24px;
+            margin: 0;
+            font-weight: 700;
+            letter-spacing: 0.5px;
+        }
+
+        header .logo span {
+            font-size: 14px;
+            color: #77dd77;
+            margin-left: 5px;
+            font-weight: 800;
+        }
+
         .gradient-custom-2 {
-            border-top-right-radius: .3rem;
-            border-bottom-right-radius: .3rem;
+            background: linear-gradient(to right, #014d36, #028052, #3c9d3f, #80c878, #d5f5d3);
         }
-    }
 
-    .card {
-        width: 600px !important;
-    }
+        .gradient-form {
+            background: linear-gradient(to right, #e8f5e9, #f7f7f7);
+            flex-grow: 1;
+            display: flex;
+            align-items: center;
+        }
 
-    .col-lg-6 {
-        max-width: 100% !important;
-    }
+        .btn-primary {
+            background: linear-gradient(to right, #004d40, #388e3c, #81c784);
+            border: none;
+            font-weight: bold;
+            color: white;
+            transition: background 0.3s ease, box-shadow 0.3s ease;
+        }
 
-    .col-xl-10 {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-    }
-</style>
+        .btn-primary:hover {
+            background: linear-gradient(to right, #81c784, #388e3c, #004d40);
+            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
+        }
+
+        .error-text {
+            color: red;
+            font-size: 14px;
+            margin-top: 5px;
+        }
+
+        footer {
+            background-color: #020101;
+            color: #fff;
+            text-align: center;
+            padding: 10px 0;
+            font-size: 14px;
+            position: fixed;
+            bottom: 0;
+            width: 100%;
+        }
+    </style>
+</head>
 <body>
-<section class="h-100 gradient-form" style="background-color: #eee;">
+<header>
+    <h1 class="logo">LearnEase <span>Beta</span></h1>
+</header>
+<section class="h-100 gradient-form">
     <div class="container py-5 h-100">
         <div class="row d-flex justify-content-center align-items-center h-100">
             <div class="col-xl-10">
                 <div class="card rounded-3 text-black">
-                    <div class="col-lg-6">
-                        <div class="card-body p-md-5 mx-md-4">
-
-                            <div class="text-center">
-                                <h4 class="mt-1 mb-5 pb-1">Add Login</h4>
+                    <div class="row g-0">
+                        <div class="col-lg-6 d-flex align-items-center gradient-custom-2">
+                            <div class="text-white px-3 py-4 p-md-5 mx-md-4">
+                                <h4 class="mb-4">Welcome to LearnEase</h4>
+                                <p>We are more than just a learning page. Discover a world of tailored education designed to empower your learning journey.</p>
                             </div>
-
-                            <form id="loginForm" method="post" action="/add-login">
-                                <div id="formError" class="alert alert-danger d-none" role="alert">
-                                    Error occurred while creating login. Please try again.
+                        </div>
+                        <div class="col-lg-6">
+                            <div class="card-body p-md-5 mx-md-4">
+                                <div class="text-center">
+                                    <h4 class="mt-1 mb-5 pb-1">Register</h4>
                                 </div>
-                                <p>Please create login to your account</p>
-
-                                <div class="form-outline mb-4"> Username
-                                    <label for="username" class="sr-only">Username</label>
-                                    <input type="text" id="username" name="username" class="form-control"
-                                           placeholder="Username" required autofocus>
-                                </div>
-
-                                <div class="form-outline mb-4"> Password
-                                    <label for="password" class="sr-only">Password</label>
-                                    <input type="password" id="password" name="password" class="form-control"
-                                           placeholder="Password" required>
-                                </div>
-
-                                <div class="form-outline mb-4"> Email
-                                    <label for="email" class="sr-only">Email</label>
-                                    <input type="email" id="email" name="email" class="form-control" placeholder="Email"
-                                           required>
-                                </div>
-
-                                <div class="text-center pt-1 mb-5 pb-1">
-                                    <button id="submitButton"
-                                            class="btn btn-primary btn-block fa-lg gradient-custom-2 mb-3"
-                                            type="submit">Create
-                                    </button>
-                                </div>
-                            </form>
+                                <form id="loginForm" method="post">
+                                    <p>Please create login to your account</p>
+                                    <div class="form-outline mb-4">
+                                        <label for="username" class="sr-only">Username</label>
+                                        <input type="text" id="username" name="username" class="form-control" placeholder="Username">
+                                        <span id="usernameError" class="error-text"></span>
+                                    </div>
+                                    <div class="form-outline mb-4">
+                                        <label for="password" class="sr-only">Password</label>
+                                        <input type="password" id="password" name="password" class="form-control" placeholder="Password">
+                                        <span id="passwordError" class="error-text"></span>
+                                    </div>
+                                    <div class="form-outline mb-4">
+                                        <label for="email" class="sr-only">Email</label>
+                                        <input type="email" id="email" name="email" class="form-control" placeholder="Email">
+                                        <span id="emailError" class="error-text"></span>
+                                    </div>
+                                    <div class="text-center pt-1 mb-5 pb-1">
+                                        <button id="submitButton" class="btn btn-primary btn-block gradient-custom-2 mb-3" type="button">Create</button>
+                                    </div>
+                                </form>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -92,37 +128,66 @@
         </div>
     </div>
 </section>
+<footer>
+    <p>&copy; 2024 LearnEase. All rights reserved.</p>
+</footer>
 <script>
-    document.getElementById("submitButton").addEventListener("click", function () {
-        var form = document.getElementById("loginForm");
-        var formData = new FormData(form);
-        var jsonData = {};
+    document.getElementById("submitButton").addEventListener("click", async function () {
+        const username = document.getElementById("username").value.trim();
+        const password = document.getElementById("password").value.trim();
+        const email = document.getElementById("email").value.trim();
 
-        formData.forEach(function (value, key) {
-            jsonData[key] = value;
-        });
+        const usernameError = document.getElementById("usernameError");
+        const passwordError = document.getElementById("passwordError");
+        const emailError = document.getElementById("emailError");
 
-        fetch('/add-login', {
-            method: 'POST',
-            headers: {
-                'Content-Type': 'application/json'
-            },
-            body: JSON.stringify(jsonData)
-        })
-            .then(response => {
-                if (!response.ok) {
-                    throw new Error('Network response was not ok');
-                }
-                return response.json();
-            })
-            .then(data => {
-                console.log(data);
-            })
-            .catch(error => {
-                console.error('There was an error!', error);
+        usernameError.textContent = '';
+        passwordError.textContent = '';
+        emailError.textContent = '';
+
+        let hasError = false;
+        if (!username) {
+            usernameError.textContent = 'Username is required';
+            hasError = true;
+        }
+        if (!password) {
+            passwordError.textContent = 'Password is required';
+            hasError = true;
+        }
+        if (!email) {
+            emailError.textContent = 'Email is required';
+            hasError = true;
+        } else if (!validateEmail(email)) {
+            emailError.textContent = 'Invalid email format';
+            hasError = true;
+        }
+
+        if (hasError) return;
+
+        const jsonData = { username, password, email };
+
+        try {
+            const response = await fetch('/add-login', {
+                method: 'POST',
+                headers: { 'Content-Type': 'application/json' },
+                body: JSON.stringify(jsonData),
             });
+
+            if (response.ok) {
+                window.location.href = '/login?message=User+created+successfully';
+            } else {
+                const errorResponse = await response.json();
+                throw new Error(errorResponse.message || 'Failed to create user');
+            }
+        } catch (error) {
+            console.error('Error:', error);
+        }
     });
 
+    function validateEmail(email) {
+        const emailRegex = /^[^\s@]+@[^\s@]+\.[^\s@]+$/;
+        return emailRegex.test(email);
+    }
 </script>
 </body>
 </html>
