--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -2,48 +2,132 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/styles.css">
+
     <title>Custom Login Page</title>
-</head>
-<style>
-    .gradient-custom-2 {
-        background: #fccb90;
-
-        background: -webkit-linear-gradient(to right, #ee7724, #d8363a, #dd3675, #b44593);
-
-        background: linear-gradient(to right, #ee7724, #d8363a, #dd3675, #b44593);
-    }
-
-    @media (min-width: 768px) {
-        .gradient-form {
-            height: 100vh !important;
+    <style>
+        body, html {
+            margin: 0;
+            padding: 0;
+            height: 100%;
+            display: flex;
+            flex-direction: column;
         }
-    }
 
-    @media (min-width: 769px) {
+        header {
+            background-color: #000000;
+            color: #fff;
+            padding: 20px;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+
+        header .logo {
+            font-size: 24px;
+            margin: 0;
+            font-weight: 700;
+            letter-spacing: 0.5px;
+        }
+
+        header .logo span {
+            font-size: 14px;
+            color: #77dd77;
+            margin-left: 5px;
+            font-weight: 800;
+        }
+
+        footer {
+            background-color: #020101;
+            color: #fff;
+            text-align: center;
+            padding: 10px 0;
+            font-size: 14px;
+            position: fixed;
+            bottom: 0;
+            width: 100%;
+            z-index: 10;
+            font-weight: 400;
+            letter-spacing: 0.2px;
+        }
+
         .gradient-custom-2 {
-            border-top-right-radius: .3rem;
-            border-bottom-right-radius: .3rem;
+            background: -webkit-linear-gradient(to right, #014d36, #028052, #3c9d3f, #80c878, #d5f5d3);
+            background: linear-gradient(to right, #014d36, #028052, #3c9d3f, #80c878, #d5f5d3);
         }
-    }
-</style>
+
+        .gradient-form {
+            background: linear-gradient(to right, #e8f5e9, #f7f7f7);
+            flex-grow: 1;
+            display: flex;
+            align-items: center;
+        }
+
+        .btn-primary {
+            background: linear-gradient(to right, #004d40, #388e3c, #81c784);
+            border: none;
+            font-weight: bold;
+            transition: background 0.3s ease;
+        }
+
+        .btn-primary:hover {
+            background: linear-gradient(to right, #81c784, #388e3c, #004d40);
+            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
+        }
+
+        .btn-outline-danger {
+            border: 2px solid #388e3c;
+            color: #388e3c;
+            font-weight: bold;
+            transition: background 0.3s ease, color 0.3s ease;
+        }
+
+        .btn-outline-danger:hover {
+            background-color: #388e3c;
+            color: #fff;
+        }
+
+        .text-white {
+            font-weight: bold;
+        }
+
+        .text-white h4 {
+            font-size: 24px;
+            font-weight: bold;
+        }
+
+        .text-white p {
+            font-size: 14px;
+            line-height: 1.6;
+        }
+
+        .form-control {
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            height: 45px;
+        }
+    </style>
+</head>
 <body>
-<section class="h-100 gradient-form" style="background-color: #eee;">
-    <div class="container py-5 h-100">
+<header>
+    <h1 class="logo">LearnEase <span>Beta</span></h1>
+</header>
+<section class="gradient-form">
+    <div class="container py-5">
         <div class="row d-flex justify-content-center align-items-center h-100">
             <div class="col-xl-10">
-                <div class="card rounded-3 text-black">
+                <div class="card rounded-3 shadow-lg">
                     <div class="row g-0">
                         <div class="col-lg-6">
                             <div class="card-body p-md-5 mx-md-4">
-
                                 <div class="text-center">
                                     <h4 class="mt-1 mb-5 pb-1">LearnEase</h4>
                                 </div>
 
                                 <form method="post" action="/login">
                                     <p>Please login to your account</p>
-
                                     <div class="form-outline mb-4">
                                         <label for="username" class="sr-only">Username</label>
                                         <input type="text" id="username" name="username" class="form-control"
@@ -57,38 +141,37 @@
                                     </div>
 
                                     <div class="text-center pt-1 mb-5 pb-1">
-                                        <button class="btn btn-primary btn-block fa-lg gradient-custom-2 mb-3"
-                                                type="submit">Log
-                                            in
-                                        </button>
+                                        <button class="btn btn-primary btn-block fa-lg mb-3"
+                                                type="submit">Log in</button>
                                     </div>
 
-                                    <div class="d-flex align-items-center justify-content-center pb-4">
-                                        <p class="mb-0 me-2">Don't have an account?</p>
-                                        <button type="button" class="btn btn-outline-danger"
-                                                onclick="window.location.href='add-login.html'">Create new
-                                        </button>
+                                    <div class="text-center pb-4">
+                                        <p class="mb-0">Don't have an account?</p>
+                                        <button type="button" class="btn btn-outline-danger mt-2"
+                                                onclick="window.location.href='add-login.html'">Create new</button>
                                     </div>
-
                                 </form>
 
                             </div>
                         </div>
+
                         <div class="col-lg-6 d-flex align-items-center gradient-custom-2">
                             <div class="text-white px-3 py-4 p-md-5 mx-md-4">
                                 <h4 class="mb-4">We are more than just a learning page</h4>
-                                <p class="small mb-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-                                    eiusmod
-                                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
-                                    nostrud
-                                    exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                                <p>"LearnEase combines knowledge, flexibility, and a personalized
+                                    approach to make learning seamless and efficient. Join us now and experience
+                                    the difference."</p>
                             </div>
                         </div>
+
                     </div>
                 </div>
             </div>
         </div>
     </div>
 </section>
+<footer>
+    <p>&copy; 2024 LearnEase. All rights reserved.</p>
+</footer>
 </body>
 </html>
